--- a/style.css
+++ b/style.css
@@ -119,13 +119,13 @@ img {
     color: #868484;
   }
   .center {
-    width: 320px;
+    width: 500px;
     margin: 0 auto;
   }
   .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: 12rem 1fr;
+    grid-template-rows: 1fr 1fr;
     margin-top: 2rem;
   }
   .text-container {
@@ -138,7 +138,8 @@ img {
     display: flex;
     border: 1px solid black;
     border-radius: 0 0.5rem 0 0;
-    width: 18rem;
+    width: 29rem;
+    height: 20rem;
     margin: 0 1rem;
   }
   .grid-container-2 {
@@ -161,28 +162,29 @@ img {
   ul a {
     text-decoration: none;
     color: #868484;
-    font-size: 1rem;
+    font-size: 1.8rem;
   }
   .main-text {
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: 900;
     letter-spacing: 5px;
   }
   span {
     font-weight: 600;
     margin-top: 1rem;
+    font-size: 1.2rem;
   }
   p {
     line-height: 1.5;
     font-weight: 600;
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
   .icon-container {
     display: flex;
     flex-flow: column wrap;
     position: relative;
     top: 2rem;
-    left: 10rem;
+    left: 21rem;
     gap: 1rem;
     align-items: flex-end;
   }
@@ -207,7 +209,7 @@ img {
     padding: 1.5rem 3rem;
   }
 }
-@media (max-width: 2500px) and (min-width: 500px) {
+@media (max-width: 2500px) and (min-width: 400px) {
   .main-btn-1 {
     display: none;
   }
