--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ img {
 
 /* mobile-reponsive */
 
-@media (max-width: 500px) {
+@media (max-width: 450px) {
   * {
     padding: 0;
     margin: 0;
@@ -119,7 +119,7 @@ img {
     color: #868484;
   }
   .center {
-    width: 500px;
+    width: 400px;
     margin: 0 auto;
   }
   .grid-container {
@@ -138,9 +138,8 @@ img {
     display: flex;
     border: 1px solid black;
     border-radius: 0 0.5rem 0 0;
-    width: 29rem;
-    height: 20rem;
-    margin: 0 1rem;
+    width: 20rem;
+    height: 15rem;
   }
   .grid-container-2 {
     display: none;
@@ -149,7 +148,7 @@ img {
     border: none;
   }
   .logo {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 900;
   }
   header {
@@ -157,34 +156,35 @@ img {
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    margin-left: 3rem;
+    width: 24.5rem;
+    margin: 0 2rem;
   }
   ul a {
     text-decoration: none;
     color: #868484;
-    font-size: 1.8rem;
+    font-size: 1rem;
   }
   .main-text {
-    font-size: 4rem;
+    font-size: 2rem;
     font-weight: 900;
     letter-spacing: 5px;
   }
   span {
     font-weight: 600;
     margin-top: 1rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
   p {
     line-height: 1.5;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
   .icon-container {
     display: flex;
     flex-flow: column wrap;
     position: relative;
     top: 2rem;
-    left: 21rem;
+    left: 16rem;
     gap: 1rem;
     align-items: flex-end;
   }
@@ -198,18 +198,22 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    bottom: 5rem;
+    margin: 0 auto;
     width: 18rem;
     border: 1px solid #868484;
-    margin-top: 2rem;
+    margin-top: 1rem;
   }
   .main-btn-1 a {
     text-decoration: none;
     font-size: 1.6rem;
     text-transform: uppercase;
     padding: 1.5rem 3rem;
+    font-weight: 600;
   }
 }
-@media (max-width: 2500px) and (min-width: 400px) {
+@media (max-width: 2500px) and (min-width: 700px) {
   .main-btn-1 {
     display: none;
   }
